# BSc-thesis-18-19

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
python-scripts/: main.cpp  make_msa2.py  zavrsni.py
src/: OSALG_lib.cpp  OSALG_lib.h  OSALG_lib_custom.cpp  OSALG_lib_custom.h  OSALG_lib_vector.cpp  OSALG_lib_vector.h  OSALG_lib_vector16.cpp  OSALG_lib_vector16.h  OptSeqAlignmentLongGaps.cpp  OptSeqAlignmentLongGapsConfig.h.in  blue_alignment.cpp  blue_alignment.hpp  brown_minimizers.cc  brown_minimizers.hpp  cleanpaf.sh  containers  containers.cpp  countmap.cc  countmap.hpp.in  detection.cpp  evaluator.py  fastaq.hpp  index.cc  index.hpp  ksw2.h  ksw2_extz2_sse.c  long_reads_mapper.cc  long_reads_mapper.hpp.in  lormap.cc  lormap.hpp.in  map.cc  map.hpp  mapping.hpp  mapping_params.hpp  novaSkripta.py  radixsort.cc  radixsort.hpp  region.cc  region.hpp  revcomp.cc  (+15 more)
src/R/: doBlast.R  doBlast.r  doClassification.R  doPlot.R  doPlot.r  statistics.R  statsChromosome.R  statsPlasmid.R
src/perl/: count-fragments.pl  make-fragments.pl  plot-graph.pl
test/: e_coli.fasta
test_data_for_evaluator/: clarktestdataset.csv  testdatasetIDs.txt  testdatasetPercentage.txt
